// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lint Conditions If Object And invalid array value {"Fn::And":[""]} 1`] = `
Array [
  Object {
    "message": "must be a Boolean, got \\"\\"",
    "path": Array [
      "Root",
      "Conditions",
      "C",
      "Fn::And",
      "0",
    ],
  },
]
`;

exports[`lint Conditions If Object And invalid value {"Fn::And":""} 1`] = `
Array [
  Object {
    "message": "must be a List, got \\"\\"",
    "path": Array [
      "Root",
      "Conditions",
      "C",
      "Fn::And",
    ],
  },
]
`;

exports[`lint Conditions If Object If different values types {"Fn::If":[true,1,false]} 1`] = `
Array [
  Object {
    "message": "branches contain different data types",
    "path": Array [
      "Root",
      "Conditions",
      "C",
      "Fn::If",
    ],
  },
]
`;

exports[`lint Conditions If Object If invalid input {"Fn::If":[{"Fn::Equals":["",""]}]} 1`] = `
Array [
  Object {
    "message": "must have three elements",
    "path": Array [
      "Root",
      "Conditions",
      "C",
      "Fn::If",
    ],
  },
]
`;

exports[`lint Conditions If Object If invalid ref {"Fn::If":[{"Fn::Equals":[{"Ref":"foo"},""]},"",""]} 1`] = `
Array [
  Object {
    "message": "foo is not a valid Parameter or Resource",
    "path": Array [
      "Root",
      "Conditions",
      "C",
      "Fn::If",
      "0",
      "Fn::Equals",
      "0",
      "Ref",
    ],
  },
]
`;

exports[`lint Conditions If Object Not invalid array value {"Fn::Not":[""]} 1`] = `
Array [
  Object {
    "message": "must be a Boolean, got \\"\\"",
    "path": Array [
      "Root",
      "Conditions",
      "C",
      "Fn::Not",
      "0",
    ],
  },
]
`;

exports[`lint Conditions If Object Not invalid value {"Fn::Not":""} 1`] = `
Array [
  Object {
    "message": "must be a List, got \\"\\"",
    "path": Array [
      "Root",
      "Conditions",
      "C",
      "Fn::Not",
    ],
  },
]
`;

exports[`lint Conditions If Object Not multiple inputs {"Fn::Not":[{"Fn::Equals":["",""]},{"Fn::Equals":["",""]}]} 1`] = `Array []`;

exports[`lint Conditions If Object Not single input {"Fn::Not":[{"Fn::Equals":["",""]}]} 1`] = `Array []`;

exports[`lint Conditions If Object Or invalid array value {"Fn::Or":[""]} 1`] = `
Array [
  Object {
    "message": "must be a Boolean, got \\"\\"",
    "path": Array [
      "Root",
      "Conditions",
      "C",
      "Fn::Or",
      "0",
    ],
  },
]
`;

exports[`lint Conditions If Object Or invalid value {"Fn::Or":""} 1`] = `
Array [
  Object {
    "message": "must be a List, got \\"\\"",
    "path": Array [
      "Root",
      "Conditions",
      "C",
      "Fn::Or",
    ],
  },
]
`;

exports[`lint Conditions If YAMLTag And invalid array value {"And":[""]} 1`] = `
Array [
  Object {
    "message": "must be a Boolean, got \\"\\"",
    "path": Array [
      "Root",
      "Conditions",
      "C",
      "And",
      "0",
    ],
  },
]
`;

exports[`lint Conditions If YAMLTag And invalid value {"And":""} 1`] = `
Array [
  Object {
    "message": "must be a List, got \\"\\"",
    "path": Array [
      "Root",
      "Conditions",
      "C",
      "And",
    ],
  },
]
`;

exports[`lint Conditions If YAMLTag If different values types {"If":[true,1,false]} 1`] = `
Array [
  Object {
    "message": "branches contain different data types",
    "path": Array [
      "Root",
      "Conditions",
      "C",
      "If",
    ],
  },
]
`;

exports[`lint Conditions If YAMLTag If invalid input {"If":[{"Equals":["",""]}]} 1`] = `
Array [
  Object {
    "message": "must have three elements",
    "path": Array [
      "Root",
      "Conditions",
      "C",
      "If",
    ],
  },
]
`;

exports[`lint Conditions If YAMLTag If invalid ref {"If":[{"Equals":[{"Ref":"foo"},""]},"",""]} 1`] = `
Array [
  Object {
    "message": "foo is not a valid Parameter or Resource",
    "path": Array [
      "Root",
      "Conditions",
      "C",
      "If",
      "0",
      "Equals",
      "0",
      "Ref",
    ],
  },
]
`;

exports[`lint Conditions If YAMLTag Not invalid array value {"Not":[""]} 1`] = `
Array [
  Object {
    "message": "must be a Boolean, got \\"\\"",
    "path": Array [
      "Root",
      "Conditions",
      "C",
      "Not",
      "0",
    ],
  },
]
`;

exports[`lint Conditions If YAMLTag Not invalid value {"Not":""} 1`] = `
Array [
  Object {
    "message": "must be a List, got \\"\\"",
    "path": Array [
      "Root",
      "Conditions",
      "C",
      "Not",
    ],
  },
]
`;

exports[`lint Conditions If YAMLTag Not multiple inputs {"Not":[{"Equals":["",""]},{"Equals":["",""]}]} 1`] = `Array []`;

exports[`lint Conditions If YAMLTag Not single input {"Not":[{"Equals":["",""]}]} 1`] = `Array []`;

exports[`lint Conditions If YAMLTag Or invalid array value {"Or":[""]} 1`] = `
Array [
  Object {
    "message": "must be a Boolean, got \\"\\"",
    "path": Array [
      "Root",
      "Conditions",
      "C",
      "Or",
      "0",
    ],
  },
]
`;

exports[`lint Conditions If YAMLTag Or invalid value {"Or":""} 1`] = `
Array [
  Object {
    "message": "must be a List, got \\"\\"",
    "path": Array [
      "Root",
      "Conditions",
      "C",
      "Or",
    ],
  },
]
`;

exports[`lint GetAZs Object extra input {"Fn::GetAZs":["",[""],""]} 1`] = `
Array [
  Object {
    "message": "is required",
    "path": Array [
      "Root",
      "Resources",
      "Certificate",
    ],
  },
]
`;

exports[`lint GetAZs Object invalid type {"Fn::GetAZs":[[],""]} 1`] = `
Array [
  Object {
    "message": "is required",
    "path": Array [
      "Root",
      "Resources",
      "Certificate",
    ],
  },
]
`;

exports[`lint GetAZs Object invalid type {"Fn::GetAZs":{"a":""}} 1`] = `
Array [
  Object {
    "message": "is required",
    "path": Array [
      "Root",
      "Resources",
      "Certificate",
    ],
  },
]
`;

exports[`lint GetAZs Object missing input {"Fn::GetAZs":[""]} 1`] = `
Array [
  Object {
    "message": "is required",
    "path": Array [
      "Root",
      "Resources",
      "Certificate",
    ],
  },
]
`;

exports[`lint GetAZs YAMLTag extra input {"GetAZs":["",[""],""]} 1`] = `
Array [
  Object {
    "message": "is required",
    "path": Array [
      "Root",
      "Resources",
      "Certificate",
    ],
  },
]
`;

exports[`lint GetAZs YAMLTag invalid type {"GetAZs":[[],""]} 1`] = `
Array [
  Object {
    "message": "is required",
    "path": Array [
      "Root",
      "Resources",
      "Certificate",
    ],
  },
]
`;

exports[`lint GetAZs YAMLTag invalid type {"GetAZs":{"a":""}} 1`] = `
Array [
  Object {
    "message": "is required",
    "path": Array [
      "Root",
      "Resources",
      "Certificate",
    ],
  },
]
`;

exports[`lint GetAZs YAMLTag missing input {"GetAZs":[""]} 1`] = `
Array [
  Object {
    "message": "is required",
    "path": Array [
      "Root",
      "Resources",
      "Certificate",
    ],
  },
]
`;

exports[`lint ImportValue Object extra input {"Fn::ImportValue":["",[""],""]} 1`] = `
Array [
  Object {
    "message": "must be a String, got [\\"\\",[\\"\\"],\\"\\"]",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Fn::ImportValue",
    ],
  },
]
`;

exports[`lint ImportValue Object invalid type {"Fn::ImportValue":[[],""]} 1`] = `
Array [
  Object {
    "message": "must be a String, got [[],\\"\\"]",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Fn::ImportValue",
    ],
  },
]
`;

exports[`lint ImportValue Object invalid type {"Fn::ImportValue":{"a":""}} 1`] = `
Array [
  Object {
    "message": "must be a String, got {\\"a\\":\\"\\"}",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Fn::ImportValue",
    ],
  },
]
`;

exports[`lint ImportValue Object missing input {"Fn::ImportValue":[""]} 1`] = `
Array [
  Object {
    "message": "must be a String, got [\\"\\"]",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Fn::ImportValue",
    ],
  },
]
`;

exports[`lint ImportValue YAMLTag extra input {"ImportValue":["",[""],""]} 1`] = `
Array [
  Object {
    "message": "must be a String, got [\\"\\",[\\"\\"],\\"\\"]",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "ImportValue",
    ],
  },
]
`;

exports[`lint ImportValue YAMLTag invalid type {"ImportValue":[[],""]} 1`] = `
Array [
  Object {
    "message": "must be a String, got [[],\\"\\"]",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "ImportValue",
    ],
  },
]
`;

exports[`lint ImportValue YAMLTag invalid type {"ImportValue":{"a":""}} 1`] = `
Array [
  Object {
    "message": "must be a String, got {\\"a\\":\\"\\"}",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "ImportValue",
    ],
  },
]
`;

exports[`lint ImportValue YAMLTag missing input {"ImportValue":[""]} 1`] = `
Array [
  Object {
    "message": "must be a String, got [\\"\\"]",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "ImportValue",
    ],
  },
]
`;

exports[`lint Mappings empty 1`] = `Array []`;

exports[`lint Mappings empty object {} 1`] = `Array []`;

exports[`lint Mappings invalid type 1`] = `
Array [
  Object {
    "message": "must be an Object, got \\"\\"",
    "path": Array [
      "Root",
      "Mappings",
    ],
  },
]
`;

exports[`lint Mappings object {"a":{"b":""}} 1`] = `
Array [
  Object {
    "message": "must be an Object, got \\"\\"",
    "path": Array [
      "Root",
      "Mappings",
      "a",
      "b",
    ],
  },
]
`;

exports[`lint Mappings object {"a":{"b":{"c":"d"}}} 1`] = `Array []`;

exports[`lint Outputs description {"Value":"v","Description":"d"} 1`] = `Array []`;

exports[`lint Outputs empty 1`] = `Array []`;

exports[`lint Outputs export {"Value":"v","Export":{"Name":"n"}} 1`] = `Array []`;

exports[`lint Outputs invalid type 1`] = `
Array [
  Object {
    "message": "must be an Object, got \\"\\"",
    "path": Array [
      "Root",
      "Outputs",
    ],
  },
]
`;

exports[`lint Outputs invalid type description {"Value":"v","Description":{}} 1`] = `
Array [
  Object {
    "message": "must be a String, got {}",
    "path": Array [
      "Root",
      "Outputs",
      "O",
      "Description",
    ],
  },
]
`;

exports[`lint Outputs invalid type export {"Value":"v","Export":{"Name":{}}} 1`] = `
Array [
  Object {
    "message": "must be a String, got {}",
    "path": Array [
      "Root",
      "Outputs",
      "O",
      "Export",
      "Name",
    ],
  },
]
`;

exports[`lint Outputs invalid type value {"Value":{}} 1`] = `
Array [
  Object {
    "message": "must be a String, got {}",
    "path": Array [
      "Root",
      "Outputs",
      "O",
      "Value",
    ],
  },
]
`;

exports[`lint Outputs missing export name {"Value":"v","Export":{}} 1`] = `
Array [
  Object {
    "message": "is required",
    "path": Array [
      "Root",
      "Outputs",
      "O",
      "Export",
      "Name",
    ],
  },
]
`;

exports[`lint Outputs value {"Value":"v"} 1`] = `Array []`;

exports[`lint Resources Base64 Object Ref with invalid resource {"Fn::Base64":{"Ref":"Nothing"}} 1`] = `
Array [
  Object {
    "message": "Nothing is not a valid Parameter or Resource",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Fn::Base64",
      "Ref",
    ],
  },
]
`;

exports[`lint Resources Base64 YAMLTag Ref with invalid resource {"Base64":{"Ref":"Nothing"}} 1`] = `
Array [
  Object {
    "message": "Nothing is not a valid Parameter or Resource",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Base64",
      "Ref",
    ],
  },
]
`;

exports[`lint Resources DependsOn invalid resource 1`] = `
Array [
  Object {
    "message": "Foo is not a valid Resource",
    "path": Array [
      "Root",
      "Resources",
      "A",
    ],
  },
]
`;

exports[`lint Resources GetAtt invalid attribute YAMLTag {"GetAtt":"A.Bar"} 1`] = `
Array [
  Object {
    "message": "Bar is not a valid attribute of A",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "GetAtt",
    ],
  },
]
`;

exports[`lint Resources GetAtt invalid resource Object {"Fn::GetAtt":["A","Cat"]} 1`] = `
Array [
  Object {
    "message": "Cat is not a valid attribute of A",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Fn::GetAtt",
    ],
  },
]
`;

exports[`lint Resources GetAtt invalid resource YAMLTag {"GetAtt":"Blag.Arn"} 1`] = `
Array [
  Object {
    "message": "Blag is not a valid Resource",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "GetAtt",
    ],
  },
]
`;

exports[`lint Resources GetAtt invalid resource YAMLTag {"GetAtt":["A","Cat"]} 1`] = `
Array [
  Object {
    "message": "Cat is not a valid attribute of A",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "GetAtt",
    ],
  },
]
`;

exports[`lint Resources GetAtt invalid type {"Fn::GetAtt":["\${A}"]} 1`] = `
Array [
  Object {
    "message": "must be a List of two Strings",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Fn::GetAtt",
    ],
  },
]
`;

exports[`lint Resources GetAtt invalid type {"Fn::GetAtt":[{},"\${A}"]} 1`] = `
Array [
  Object {
    "message": "must be a List of two Strings",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Fn::GetAtt",
    ],
  },
]
`;

exports[`lint Resources GetAtt invalid type {"Fn::GetAtt":{}} 1`] = `
Array [
  Object {
    "message": "must be a List of two Strings",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Fn::GetAtt",
    ],
  },
]
`;

exports[`lint Resources GetAtt invalid type {"GetAtt":{}} 1`] = `
Array [
  Object {
    "message": "must be a String or a List of two Strings",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "GetAtt",
    ],
  },
]
`;

exports[`lint Resources Join Object extra input {"Fn::Join":["","",""]} 1`] = `
Array [
  Object {
    "message": "must be a List with 2 items",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Fn::Join",
    ],
  },
]
`;

exports[`lint Resources Join Object invalid type {"Fn::Join":""} 1`] = `
Array [
  Object {
    "message": "must be a List, got \\"\\"",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Fn::Join",
    ],
  },
]
`;

exports[`lint Resources Join Object invalid type {"Fn::Join":[[],""]} 1`] = `
Array [
  Object {
    "message": "must be a String, got []",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Fn::Join",
      "0",
    ],
  },
  Object {
    "message": "must be a List, got \\"\\"",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Fn::Join",
      "1",
    ],
  },
]
`;

exports[`lint Resources Join Object missing input {"Fn::Join":[""]} 1`] = `
Array [
  Object {
    "message": "must be a List with 2 items",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Fn::Join",
    ],
  },
]
`;

exports[`lint Resources Join YAMLTag extra input {"Join":["","",""]} 1`] = `
Array [
  Object {
    "message": "must be a List with 2 items",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Join",
    ],
  },
]
`;

exports[`lint Resources Join YAMLTag invalid type {"Join":""} 1`] = `
Array [
  Object {
    "message": "must be a List, got \\"\\"",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Join",
    ],
  },
]
`;

exports[`lint Resources Join YAMLTag invalid type {"Join":[[],""]} 1`] = `
Array [
  Object {
    "message": "must be a String, got []",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Join",
      "0",
    ],
  },
  Object {
    "message": "must be a List, got \\"\\"",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Join",
      "1",
    ],
  },
]
`;

exports[`lint Resources Join YAMLTag missing input {"Join":[""]} 1`] = `
Array [
  Object {
    "message": "must be a List with 2 items",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Join",
    ],
  },
]
`;

exports[`lint Resources Ref Object invalid resource {"Ref":"Blag"} 1`] = `
Array [
  Object {
    "message": "Blag is not a valid Parameter or Resource",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Ref",
    ],
  },
]
`;

exports[`lint Resources Ref Object invalid type {"Ref":["A"]} 1`] = `
Array [
  Object {
    "message": "must be a String, got [\\"A\\"]",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Ref",
    ],
  },
]
`;

exports[`lint Resources Ref YAMLTag invalid resource {"Ref":"Blag"} 1`] = `
Array [
  Object {
    "message": "Blag is not a valid Parameter or Resource",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Ref",
    ],
  },
]
`;

exports[`lint Resources Ref YAMLTag invalid type {"Ref":["A"]} 1`] = `
Array [
  Object {
    "message": "must be a String, got [\\"A\\"]",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Ref",
    ],
  },
]
`;

exports[`lint Resources Sub Object invalid attribute {"Fn::Sub":"\${A.Bar}"} 1`] = `
Array [
  Object {
    "message": "Bar is not a valid Attribute of A",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Fn::Sub",
    ],
  },
]
`;

exports[`lint Resources Sub Object invalid resource {"Fn::Sub":"\${Blag}"} 1`] = `
Array [
  Object {
    "message": "Blag not a valid Parameter or Resource",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Fn::Sub",
    ],
  },
]
`;

exports[`lint Resources Sub Object invalid type {"Fn::Sub":["\${A}"]} 1`] = `
Array [
  Object {
    "message": "must be a String or List of Sting and Map",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Fn::Sub",
    ],
  },
]
`;

exports[`lint Resources Sub Object invalid type {"Fn::Sub":[{},"\${A}"]} 1`] = `
Array [
  Object {
    "message": "must be a String, got {}",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Fn::Sub",
      "0",
    ],
  },
  Object {
    "message": "must be an Object, got \\"\${A}\\"",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Fn::Sub",
      "1",
    ],
  },
]
`;

exports[`lint Resources Sub Object invalid type {"Fn::Sub":{}} 1`] = `
Array [
  Object {
    "message": "must be a String or List of Sting and Map",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Fn::Sub",
    ],
  },
]
`;

exports[`lint Resources Sub Object multiple with invalid resource {"Fn::Sub":"a\${Bar}b\${B}"} 1`] = `
Array [
  Object {
    "message": "Bar not a valid Parameter or Resource",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Fn::Sub",
    ],
  },
]
`;

exports[`lint Resources Sub YAMLTag invalid attribute {"Sub":"\${A.Bar}"} 1`] = `
Array [
  Object {
    "message": "Bar is not a valid Attribute of A",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Sub",
    ],
  },
]
`;

exports[`lint Resources Sub YAMLTag invalid resource {"Sub":"\${Blag}"} 1`] = `
Array [
  Object {
    "message": "Blag not a valid Parameter or Resource",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Sub",
    ],
  },
]
`;

exports[`lint Resources Sub YAMLTag invalid type {"Sub":["\${A}"]} 1`] = `
Array [
  Object {
    "message": "must be a String or List of Sting and Map",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Sub",
    ],
  },
]
`;

exports[`lint Resources Sub YAMLTag invalid type {"Sub":[{},"\${A}"]} 1`] = `
Array [
  Object {
    "message": "must be a String, got {}",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Sub",
      "0",
    ],
  },
  Object {
    "message": "must be an Object, got \\"\${A}\\"",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Sub",
      "1",
    ],
  },
]
`;

exports[`lint Resources Sub YAMLTag invalid type {"Sub":{}} 1`] = `
Array [
  Object {
    "message": "must be a String or List of Sting and Map",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Sub",
    ],
  },
]
`;

exports[`lint Resources Sub YAMLTag multiple with invalid resource {"Sub":"a\${Bar}b\${B}"} 1`] = `
Array [
  Object {
    "message": "Bar not a valid Parameter or Resource",
    "path": Array [
      "Root",
      "Resources",
      "Bucket",
      "Properties",
      "BucketName",
      "Sub",
    ],
  },
]
`;

exports[`lint Resources at least one of missing 1`] = `
Array [
  Object {
    "message": "one of Ipv6CidrBlock, CidrBlock must be provided",
    "path": Array [
      "Root",
      "Resources",
      "NACL",
      "Properties",
    ],
  },
]
`;

exports[`lint Resources at least one of missing for property 1`] = `
Array [
  Object {
    "message": "at least one of Memory, MemoryReservation must be provided",
    "path": Array [
      "Root",
      "Resources",
      "TaskDef",
      "Properties",
      "ContainerDefinitions",
      "0",
    ],
  },
]
`;

exports[`lint Resources exclusive property type with exclusive properties 1`] = `
Array [
  Object {
    "message": "TTL can not be set when AliasTarget is set",
    "path": Array [
      "Root",
      "Resources",
      "Record",
      "Properties",
      "TTL",
    ],
  },
]
`;

exports[`lint Resources exclusive resource type with exclusive properties 1`] = `
Array [
  Object {
    "message": "CidrIpv6 can not be set when CidrIp is set",
    "path": Array [
      "Root",
      "Resources",
      "SGIngress",
      "Properties",
      "CidrIpv6",
    ],
  },
]
`;

exports[`lint Resources inclusive missing 1`] = `
Array [
  Object {
    "message": "MasterUserPassword must be provided when MasterUsername is provided",
    "path": Array [
      "Root",
      "Resources",
      "NACL",
      "Properties",
      "MasterUsername",
    ],
  },
]
`;

exports[`lint Resources only one invalid 1`] = `Array []`;

exports[`lint Split Object extra input {"Fn::Split":["",[""],""]} 1`] = `
Array [
  Object {
    "message": "is required",
    "path": Array [
      "Root",
      "Resources",
      "Certificate",
    ],
  },
]
`;

exports[`lint Split Object invalid type {"Fn::Split":""} 1`] = `
Array [
  Object {
    "message": "is required",
    "path": Array [
      "Root",
      "Resources",
      "Certificate",
    ],
  },
]
`;

exports[`lint Split Object invalid type {"Fn::Split":[[],""]} 1`] = `
Array [
  Object {
    "message": "is required",
    "path": Array [
      "Root",
      "Resources",
      "Certificate",
    ],
  },
]
`;

exports[`lint Split Object missing input {"Fn::Split":[""]} 1`] = `
Array [
  Object {
    "message": "is required",
    "path": Array [
      "Root",
      "Resources",
      "Certificate",
    ],
  },
]
`;

exports[`lint Split YAMLTag extra input {"Split":["",[""],""]} 1`] = `
Array [
  Object {
    "message": "is required",
    "path": Array [
      "Root",
      "Resources",
      "Certificate",
    ],
  },
]
`;

exports[`lint Split YAMLTag invalid type {"Split":""} 1`] = `
Array [
  Object {
    "message": "is required",
    "path": Array [
      "Root",
      "Resources",
      "Certificate",
    ],
  },
]
`;

exports[`lint Split YAMLTag invalid type {"Split":[[],""]} 1`] = `
Array [
  Object {
    "message": "is required",
    "path": Array [
      "Root",
      "Resources",
      "Certificate",
    ],
  },
]
`;

exports[`lint Split YAMLTag missing input {"Split":[""]} 1`] = `
Array [
  Object {
    "message": "is required",
    "path": Array [
      "Root",
      "Resources",
      "Certificate",
    ],
  },
]
`;

exports[`lint with parameters string values invalid default 1`] = `
Array [
  Object {
    "message": "must be a Number, got Ref ExpirationInDays",
    "path": Array [
      "Root",
      "Resources",
      "A",
      "Properties",
      "LifecycleConfiguration",
      "Rules",
      "0",
      "ExpirationInDays",
    ],
  },
]
`;

exports[`lint with parameters string values invalid value 1`] = `
Array [
  Object {
    "message": "must be a Number, got Ref ExpirationInDays",
    "path": Array [
      "Root",
      "Resources",
      "A",
      "Properties",
      "LifecycleConfiguration",
      "Rules",
      "0",
      "ExpirationInDays",
    ],
  },
]
`;
